spacing fixed on title

--- a/Styles/base.css
+++ b/Styles/base.css
@@ -29,6 +29,7 @@ h1 {
     font-size: 30px;
     color: #36211B;
     text-align: center;
+    margin-top: 0;
 }
 
 .verse {
